--- a/Client/app/src/main/res/values-night/splash.xml
+++ b/Client/app/src/main/res/values-night/splash.xml
@@ -1,9 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="App.Starting.Theme" parent="Theme.SplashScreen">
-        <item name="android:windowSplashScreenBackground">#1C1E21</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
-        <item name="postSplashScreenTheme">@style/Theme.IELsTLearningApplication</item>
-    </style>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<resources>-->
+<!--    <style name="App.Starting.Theme" parent="Theme.SplashScreen">-->
+<!--        <item name="android:windowSplashScreenBackground">#1C1E21</item>-->
+<!--        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>-->
+<!--        <item name="postSplashScreenTheme">@style/Theme.IELsTLearningApplication</item>-->
+<!--    </style>-->
 
+<!--</resources>-->
+
+<resources>
+<style name="App.Starting.Theme" parent="Theme.SplashScreen">
+    <item name="android:windowSplashScreenBackground">#1C1E21</item>
+    <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowNoTitle">true</item>
+    <item name="postSplashScreenTheme">@style/Theme.IELsTLearningApplication</item>
+</style>
 </resources>
