--- a/Client/app/src/main/res/values/splash.xml
+++ b/Client/app/src/main/res/values/splash.xml
@@ -1,9 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <style name="App.Starting.Theme" parent="Theme.SplashScreen">
-        <item name="android:windowSplashScreenBackground">#002147</item>
-        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
-        <item name="postSplashScreenTheme">@style/Theme.IELsTLearningApplication</item>
-    </style>
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<resources>-->
+<!--    <style name="App.Starting.Theme" parent="Theme.SplashScreen">-->
+<!--        <item name="android:windowSplashScreenBackground">#002147</item>-->
+<!--        <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>-->
+<!--        <item name="postSplashScreenTheme">@style/Theme.IELsTLearningApplication</item>-->
+<!--    </style>-->
+<!--</resources>-->
 
+<resources>
+<style name="App.Starting.Theme" parent="Theme.SplashScreen">
+    <item name="android:windowSplashScreenBackground">#002147</item>
+    <item name="android:windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowNoTitle">true</item>
+    <item name="postSplashScreenTheme">@style/Theme.IELsTLearningApplication</item>
+</style>
 </resources>
