--- a/Client/app/src/main/res/xml/network_security_config.xml
+++ b/Client/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,7 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">10.0.2.2</domain>
+        <domain includeSubdomains="true">192.168.2.56</domain>
+        <domain includeSubdomains="true">192.168.88.122</domain>
     </domain-config>
 </network-security-config>
